# egg-llm

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh  clean.sh  llama-version.env  test.sh
.cargo/: config.toml
src/: main.rs
tools/: lld-link.sh
tools/vk-probe/: probe.comp  probe.spv  probe_rmw.comp  probe_rmw.spv
